# codingo

./: .gitignore  Codingo_Application_Information_June_2026.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
scripts/: gen-icon.cjs  seed-campaigns.cjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatComposer.tsx  ConsolePane.tsx  EditorPane.tsx  ObjectiveHeatmap.tsx  ReplayScrubber.tsx  Sidebar.tsx  TalkButton.tsx  TaskPane.tsx  ThemeToggle.tsx  TranscriptPanel.tsx  UnlockDialog.tsx  ui.tsx
src/lib/: monaco.ts  run.ts  types.ts  utils.ts
src/lib/ai/: analysis.ts  provider.ts  socratic.ts
src/lib/capture/: useEventLogger.ts
src/lib/db/: database.ts
src/lib/settings/: store.ts
src/lib/theme/: ThemeProvider.tsx
src/lib/voice/: record.ts  speak.ts  transcribe.ts
src/modes/: AnalyzeMode.tsx  AuthorMode.tsx  LearnMode.tsx  Settings.tsx
src/state/: appStore.ts
